--- a/app/src/main/res/layout/activity_mainadmin.xml
+++ b/app/src/main/res/layout/activity_mainadmin.xml
@@ -26,7 +26,38 @@
 
         </fragment>
     </androidx.drawerlayout.widget.DrawerLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="80dp"
+            android:layout_height="33dp"
+            android:background="@drawable/search_bg"
+            android:text="       "
+            android:textSize="40dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintBottom_toBottomOf="@+id/nameid"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/nameid"
+            android:layout_width="80dp"
+            android:layout_height="33dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="16dp"
+            android:text="admin"
+            android:textAlignment="center"
+            android:textColor="@color/PaleGoldenrod"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/textView7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.navigation.NavigationView
 
         android:id="@+id/nav_view"
