--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,10 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/icon_home"
             android:title="Home"/>
+        <item
+            android:id="@+id/nav_cart"
+            android:icon="@drawable/icon_cart"
+            android:title="Cart"/>
     </group>
 
 </menu>
