--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -23,60 +23,53 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginBottom="384dp"
         android:background="@color/SaddleBrown"
         android:text="  Trà sữa truyền thống  "
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/credit"
         android:layout_width="399dp"
-        android:layout_height="76dp"
-        android:layout_marginBottom="296dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="Trà Sữa Truyền Thống với đậm vị trà hòa kết hợp cùng vị béo thơm của sữa mang đến một thức uống thơm ngon được nhiều người ưa thích."
         android:textAlignment="center"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_img"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/item_img" />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="12dp"
         android:background="@drawable/blur_white"
         android:fontFamily="casual"
         android:text="  20.000  "
         android:textSize="25dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/credit"
-        app:layout_constraintEnd_toEndOf="@+id/item_img"
-        app:layout_constraintHorizontal_bias="0.542"
-        app:layout_constraintStart_toEndOf="@+id/name" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/credit" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/buttonAdd"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="140dp"
         android:background="@drawable/button_style1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/credit"
-        app:layout_constraintVertical_bias="0.212">
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
