--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,8 +5,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/icon_home"
-            android:title="Home"/>
+            android:icon="@drawable/menu"
+            android:title="Menu"/>
         <item
             android:id="@+id/nav_cart"
             android:icon="@drawable/icon_cart"
