--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.ordering.UI.HomeFragment"
-        android:label="Home"
+        android:label="Menu"
         tool:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/nav_cart"
