--- a/app/src/main/res/layout/activity_mainadmin.xml
+++ b/app/src/main/res/layout/activity_mainadmin.xml
@@ -16,13 +16,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
         <fragment
-
-            android:id="@+id/nav_host_fragment"
+            android:id="@+id/nav_host_fragment_admin"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/mobile_navigation">
+            app:navGraph="@navigation/mobile_navigation_admin">
 
         </fragment>
     </androidx.drawerlayout.widget.DrawerLayout>
@@ -60,13 +59,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <com.google.android.material.navigation.NavigationView
 
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_view_admin"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer"
+        app:menu="@menu/activity_main_drawer_admin"
         android:background="@color/white"
         app:itemIconTint="@color/brown"
         app:itemTextColor="@color/brown">
