--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/PaleGoldenrod"
     android:padding="10dp"
     android:id="@+id/order">
@@ -14,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
-        android:fontFamily="casual"
         android:text="Thông tin đơn"
         android:textColor="@color/brown"
         android:textStyle="bold|italic"
@@ -44,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cart_txt"
         app:layout_constraintWidth_percent=".6" />
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cart_rec"
+        android:id="@+id/order_rec"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,53 +56,81 @@
         android:background="@color/SaddleBrown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cart_rec"
+        app:layout_constraintTop_toBottomOf="@+id/order_rec"
         app:layout_constraintWidth_percent=".6"
         android:layout_marginTop="5dp"/>
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+
+    <EditText
+        android:id="@+id/order_note"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Tổng "
-        android:textSize="19sp"
-        android:textStyle="bold"
-        android:textColor="@color/SaddleBrown"
+        android:hint="Xin ghi số bàn ở đây / có thể ghi chú"
+        android:textSize="17dp"
+        android:textColor="@color/brown"
+        android:textColorHint="@color/brown"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
 
-    <TextView
-        android:id="@+id/total"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="20000 "
-        android:textSize="24sp"
-        android:paddingRight="45dp"
-        android:textStyle="bold"
-        android:textColor="@color/SaddleBrown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="đ"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:paddingRight="15dp"
-        android:textColor="@color/SaddleBrown"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/order_note">
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Tổng "
+            android:textColor="@color/SaddleBrown"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/order_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="45dp"
+            android:text="20000 "
+            android:textColor="@color/SaddleBrown"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="15dp"
+            android:text="đ"
+            android:textColor="@color/SaddleBrown"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btnOrder"
+        android:id="@+id/btnPay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/button_style1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9">
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/textView2"
