--- a/app/src/main/res/navigation/mobile_navigation_admin.xml
+++ b/app/src/main/res/navigation/mobile_navigation_admin.xml
@@ -11,6 +11,11 @@
         android:label="Menu"
         tool:layout="@layout/fragment_home" />
     <fragment
+        android:id="@+id/nav_cart"
+        android:name="com.example.ordering.UI.CartFragment"
+        android:label="Cart"
+        tool:layout="@layout/fragment_cart" />
+    <fragment
         android:id="@+id/nav_order"
         android:name="com.example.ordering.UI.OrdersFragment"
         android:label="Orders"
