--- a/app/src/main/res/menu/activity_main_drawer_admin.xml
+++ b/app/src/main/res/menu/activity_main_drawer_admin.xml
@@ -8,6 +8,10 @@
             android:icon="@drawable/menu"
             android:title="Menu"/>
         <item
+            android:id="@+id/nav_cart"
+            android:icon="@drawable/icon_cart"
+            android:title="Cart"/>
+        <item
             android:id="@+id/nav_order"
             android:icon="@drawable/menu_order"
             android:title="Orders"/>
