--- a/app/src/main/res/menu/activity_main_drawer_admin.xml
+++ b/app/src/main/res/menu/activity_main_drawer_admin.xml
@@ -15,6 +15,10 @@
             android:id="@+id/nav_order"
             android:icon="@drawable/menu_order"
             android:title="Orders"/>
+        <item
+            android:id="@+id/nav_closed_bill"
+            android:icon="@drawable/bill"
+            android:title="Closed Bill"/>
     </group>
 
 </menu>
